--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
+spring.datasource.username=daniel
 spring.datasource.password=1234
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
